# PixelLibrary

./: .env-example  .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/books/: admin.py  factory.py  models.py  tests.py  views.py
backend/config/: local_settings.py  settings.py  urls.py
backend/users/: admin.py  (+2 more)
core/: .dockerignore  entrypoint.sh  pyproject.toml
core/authors/: admin.py  models.py
core/authors/migrations/: 0001_initial.py
core/books/: admin.py  models.py  serializers.py  views.py
core/books/migrations/: 0001_initial.py  0002_books_price.py  0003_books_page_count.py  0004_alter_books_price.py  0005_authcomment_basketitem_bookcomment_wishitem.py
core/config/: celery.py  local_settings.py  settings.py  urls.py
core/fixtures/: users.json
core/rabbitmq/: notification.py
core/services/permissions/: abstract.py  types.py
core/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  views.py
core/users/migrations/: 0001_initial.py  0002_users_birthday_date_users_phone_numer_and_more.py  0003_users_patronymic.py  0004_rename_phone_numer_users_phone_number.py  0005_basketitem_wishitem.py  0006_alter_basketitem_unique_together.py  0007_alter_basketitem_unique_together_and_more.py
frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json
nginx/: nginx.conf
pixelFront/: README.md  angular.json  package-lock.json  package.json
telegram_bot/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt
(+87 files in other folders)
